--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -3,7 +3,7 @@ name: ci-build
 on: [push]
 
 jobs:
-  build:
+  ci-build:
 
     runs-on: ubuntu-latest
 
@@ -20,3 +20,8 @@ jobs:
     - run: npm install --legacy-peer-deps
     - run: npm run build --if-present
     - run: npm test
+    - name: Archive code coverage
+      uses: actions/upload-artifact@v2
+      with:
+        name: lcov-${{github.sha}}.info
+        path: coverage/lcov.info
