Fix github ci build patterns.

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -2,7 +2,10 @@ name: ci-build
 
 on:
   push:
-    tags-ignore: '**'
+    branches: 
+      - '**'
+    tags-ignore:
+      - '**'
 
 jobs:
   ci-build:
