--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"types": "./dist/index.d.ts"
 	},
 	"scripts": {
-		"start": "node index.js",
+		"start": "npm run build && node ./dist/index.js",
 		"test": "npm run lint && npm run testOnly",
 		"testOnly": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r ts-node/register ./test/**/*.spec.ts",
 		"lint": "eslint . --ext .ts",
