--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test": "npm run lint && npm run testOnly",
 		"testOnly": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r ts-node/register ./test/**/*.spec.ts",
 		"lint": "eslint . --ext .ts",
-		"build": "tsc --project ./tsconfig.json",
+		"build": "rm -r ./dist && tsc --project ./tsconfig.json",
+		"buildEsm": "rm -rf ./dist && tsc --project ./tsconfig.json --module es6 --moduleResolution node ",
 		"docs": "typedoc --out docs --theme ./node_modules/typedoc-dark-theme/bin/default/ src && echo \"Docs generated at ./docs/index.html\"",
 		"prepublishOnly": "npm run build"
 	},
@@ -34,21 +35,20 @@
 	],
 	"license": "Apache-2.0",
 	"private": false,
-	"dependencies": {},
 	"devDependencies": {
-		"@types/chai": "^4.2.14",
-		"@types/mocha": "^8.2.0",
-		"@types/node": "^14.14.16",
-		"@types/sinon": "^9.0.10",
-		"@typescript-eslint/eslint-plugin": "^4.11.1",
-		"@typescript-eslint/parser": "^4.11.1",
-		"chai": "^4.2.0",
-		"eslint": "^7.16.0",
-		"mocha": "^8.2.1",
+		"@types/chai": "^4.2.15",
+		"@types/mocha": "^8.2.2",
+		"@types/node": "^14.14.35",
+		"@types/sinon": "^9.0.11",
+		"@typescript-eslint/eslint-plugin": "^4.19.0",
+		"@typescript-eslint/parser": "^4.19.0",
+		"chai": "^4.3.4",
+		"eslint": "^7.22.0",
+		"mocha": "^8.3.2",
 		"nyc": "^15.1.0",
 		"ts-node": "^9.1.1",
-		"typedoc": "^0.20.4",
+		"typedoc": "^0.20.33",
 		"typedoc-dark-theme": "0.0.11",
-		"typescript": "^4.1.3"
+		"typescript": "^4.2.3"
 	}
 }
